parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> VAR ID EQUALS expression SEMICOLON
Rule 5     statement_assignment -> ID EQUALS expression
Rule 6     statement -> statement_assignment SEMICOLON
Rule 7     statement -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 8     statement -> WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 9     statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 10    statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
Rule 11    statement -> FOR LPAREN for_init SEMICOLON expression SEMICOLON for_update RPAREN LBRACE statement_list RBRACE
Rule 12    for_init -> VAR ID EQUALS expression
Rule 13    for_init -> ID EQUALS expression
Rule 14    for_init -> empty
Rule 15    for_update -> ID EQUALS expression
Rule 16    for_update -> empty
Rule 17    empty -> <empty>
Rule 18    expression -> expression PLUS expression
Rule 19    expression -> expression MINUS expression
Rule 20    expression -> expression TIMES expression
Rule 21    expression -> expression DIVIDE expression
Rule 22    expression -> expression GT expression
Rule 23    expression -> expression LT expression
Rule 24    expression -> expression GE expression
Rule 25    expression -> expression LE expression
Rule 26    expression -> expression EQ expression
Rule 27    expression -> expression NE expression
Rule 28    expression -> NUMBER
Rule 29    expression -> ID
Rule 30    statement -> SEMICOLON

Terminals, with rules where they appear

DIVIDE               : 21
ELSE                 : 10
EQ                   : 26
EQUALS               : 4 5 12 13 15
FOR                  : 11
GE                   : 24
GT                   : 22
ID                   : 4 5 12 13 15 29
IF                   : 9 10
LBRACE               : 8 9 10 10 11
LE                   : 25
LPAREN               : 7 8 9 10 11
LT                   : 23
MINUS                : 19
NE                   : 27
NUMBER               : 28
PLUS                 : 18
PRINT                : 7
RBRACE               : 8 9 10 10 11
RPAREN               : 7 8 9 10 11
SEMICOLON            : 4 6 7 11 11 30
TIMES                : 20
VAR                  : 4 12
WHILE                : 8
error                : 

Nonterminals, with rules where they appear

empty                : 14 16
expression           : 4 5 7 8 9 10 11 12 13 15 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27
for_init             : 11
for_update           : 11
program              : 0
statement            : 2 3
statement_assignment : 6
statement_list       : 1 2 8 9 10 10 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . VAR ID EQUALS expression SEMICOLON
    (6) statement -> . statement_assignment SEMICOLON
    (7) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (8) statement -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (9) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (10) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (11) statement -> . FOR LPAREN for_init SEMICOLON expression SEMICOLON for_update RPAREN LBRACE statement_list RBRACE
    (30) statement -> . SEMICOLON
    (5) statement_assignment -> . ID EQUALS expression

    VAR             shift and go to state 4
    PRINT           shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    FOR             shift and go to state 11
    SEMICOLON       shift and go to state 6
    ID              shift and go to state 5

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    statement_assignment           shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . VAR ID EQUALS expression SEMICOLON
    (6) statement -> . statement_assignment SEMICOLON
    (7) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (8) statement -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (9) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (10) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (11) statement -> . FOR LPAREN for_init SEMICOLON expression SEMICOLON for_update RPAREN LBRACE statement_list RBRACE
    (30) statement -> . SEMICOLON
    (5) statement_assignment -> . ID EQUALS expression

    $end            reduce using rule 1 (program -> statement_list .)
    VAR             shift and go to state 4
    PRINT           shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    FOR             shift and go to state 11
    SEMICOLON       shift and go to state 6
    ID              shift and go to state 5

    statement                      shift and go to state 12
    statement_assignment           shift and go to state 7

state 3

    (3) statement_list -> statement .

    VAR             reduce using rule 3 (statement_list -> statement .)
    PRINT           reduce using rule 3 (statement_list -> statement .)
    WHILE           reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    FOR             reduce using rule 3 (statement_list -> statement .)
    SEMICOLON       reduce using rule 3 (statement_list -> statement .)
    ID              reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> VAR . ID EQUALS expression SEMICOLON

    ID              shift and go to state 13


state 5

    (5) statement_assignment -> ID . EQUALS expression

    EQUALS          shift and go to state 14


state 6

    (30) statement -> SEMICOLON .

    VAR             reduce using rule 30 (statement -> SEMICOLON .)
    PRINT           reduce using rule 30 (statement -> SEMICOLON .)
    WHILE           reduce using rule 30 (statement -> SEMICOLON .)
    IF              reduce using rule 30 (statement -> SEMICOLON .)
    FOR             reduce using rule 30 (statement -> SEMICOLON .)
    SEMICOLON       reduce using rule 30 (statement -> SEMICOLON .)
    ID              reduce using rule 30 (statement -> SEMICOLON .)
    $end            reduce using rule 30 (statement -> SEMICOLON .)
    RBRACE          reduce using rule 30 (statement -> SEMICOLON .)


state 7

    (6) statement -> statement_assignment . SEMICOLON

    SEMICOLON       shift and go to state 15


state 8

    (7) statement -> PRINT . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 16


state 9

    (8) statement -> WHILE . LPAREN expression RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 17


state 10

    (9) statement -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE
    (10) statement -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    LPAREN          shift and go to state 18


state 11

    (11) statement -> FOR . LPAREN for_init SEMICOLON expression SEMICOLON for_update RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 19


state 12

    (2) statement_list -> statement_list statement .

    VAR             reduce using rule 2 (statement_list -> statement_list statement .)
    PRINT           reduce using rule 2 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 2 (statement_list -> statement_list statement .)
    IF              reduce using rule 2 (statement_list -> statement_list statement .)
    FOR             reduce using rule 2 (statement_list -> statement_list statement .)
    SEMICOLON       reduce using rule 2 (statement_list -> statement_list statement .)
    ID              reduce using rule 2 (statement_list -> statement_list statement .)
    $end            reduce using rule 2 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement_list statement .)


state 13

    (4) statement -> VAR ID . EQUALS expression SEMICOLON

    EQUALS          shift and go to state 20


state 14

    (5) statement_assignment -> ID EQUALS . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 23
    ID              shift and go to state 21

    expression                     shift and go to state 22

state 15

    (6) statement -> statement_assignment SEMICOLON .

    VAR             reduce using rule 6 (statement -> statement_assignment SEMICOLON .)
    PRINT           reduce using rule 6 (statement -> statement_assignment SEMICOLON .)
    WHILE           reduce using rule 6 (statement -> statement_assignment SEMICOLON .)
    IF              reduce using rule 6 (statement -> statement_assignment SEMICOLON .)
    FOR             reduce using rule 6 (statement -> statement_assignment SEMICOLON .)
    SEMICOLON       reduce using rule 6 (statement -> statement_assignment SEMICOLON .)
    ID              reduce using rule 6 (statement -> statement_assignment SEMICOLON .)
    $end            reduce using rule 6 (statement -> statement_assignment SEMICOLON .)
    RBRACE          reduce using rule 6 (statement -> statement_assignment SEMICOLON .)


state 16

    (7) statement -> PRINT LPAREN . expression RPAREN SEMICOLON
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 23
    ID              shift and go to state 21

    expression                     shift and go to state 24

state 17

    (8) statement -> WHILE LPAREN . expression RPAREN LBRACE statement_list RBRACE
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 23
    ID              shift and go to state 21

    expression                     shift and go to state 25

state 18

    (9) statement -> IF LPAREN . expression RPAREN LBRACE statement_list RBRACE
    (10) statement -> IF LPAREN . expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 23
    ID              shift and go to state 21

    expression                     shift and go to state 26

state 19

    (11) statement -> FOR LPAREN . for_init SEMICOLON expression SEMICOLON for_update RPAREN LBRACE statement_list RBRACE
    (12) for_init -> . VAR ID EQUALS expression
    (13) for_init -> . ID EQUALS expression
    (14) for_init -> . empty
    (17) empty -> .

    VAR             shift and go to state 28
    ID              shift and go to state 29
    SEMICOLON       reduce using rule 17 (empty -> .)

    for_init                       shift and go to state 27
    empty                          shift and go to state 30

state 20

    (4) statement -> VAR ID EQUALS . expression SEMICOLON
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 23
    ID              shift and go to state 21

    expression                     shift and go to state 31

state 21

    (29) expression -> ID .

    PLUS            reduce using rule 29 (expression -> ID .)
    MINUS           reduce using rule 29 (expression -> ID .)
    TIMES           reduce using rule 29 (expression -> ID .)
    DIVIDE          reduce using rule 29 (expression -> ID .)
    GT              reduce using rule 29 (expression -> ID .)
    LT              reduce using rule 29 (expression -> ID .)
    GE              reduce using rule 29 (expression -> ID .)
    LE              reduce using rule 29 (expression -> ID .)
    EQ              reduce using rule 29 (expression -> ID .)
    NE              reduce using rule 29 (expression -> ID .)
    SEMICOLON       reduce using rule 29 (expression -> ID .)
    RPAREN          reduce using rule 29 (expression -> ID .)


state 22

    (5) statement_assignment -> ID EQUALS expression .
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . GT expression
    (23) expression -> expression . LT expression
    (24) expression -> expression . GE expression
    (25) expression -> expression . LE expression
    (26) expression -> expression . EQ expression
    (27) expression -> expression . NE expression

    SEMICOLON       reduce using rule 5 (statement_assignment -> ID EQUALS expression .)
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    GE              shift and go to state 38
    LE              shift and go to state 39
    EQ              shift and go to state 40
    NE              shift and go to state 41


state 23

    (28) expression -> NUMBER .

    PLUS            reduce using rule 28 (expression -> NUMBER .)
    MINUS           reduce using rule 28 (expression -> NUMBER .)
    TIMES           reduce using rule 28 (expression -> NUMBER .)
    DIVIDE          reduce using rule 28 (expression -> NUMBER .)
    GT              reduce using rule 28 (expression -> NUMBER .)
    LT              reduce using rule 28 (expression -> NUMBER .)
    GE              reduce using rule 28 (expression -> NUMBER .)
    LE              reduce using rule 28 (expression -> NUMBER .)
    EQ              reduce using rule 28 (expression -> NUMBER .)
    NE              reduce using rule 28 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 28 (expression -> NUMBER .)
    RPAREN          reduce using rule 28 (expression -> NUMBER .)


state 24

    (7) statement -> PRINT LPAREN expression . RPAREN SEMICOLON
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . GT expression
    (23) expression -> expression . LT expression
    (24) expression -> expression . GE expression
    (25) expression -> expression . LE expression
    (26) expression -> expression . EQ expression
    (27) expression -> expression . NE expression

    RPAREN          shift and go to state 42
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    GE              shift and go to state 38
    LE              shift and go to state 39
    EQ              shift and go to state 40
    NE              shift and go to state 41


state 25

    (8) statement -> WHILE LPAREN expression . RPAREN LBRACE statement_list RBRACE
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . GT expression
    (23) expression -> expression . LT expression
    (24) expression -> expression . GE expression
    (25) expression -> expression . LE expression
    (26) expression -> expression . EQ expression
    (27) expression -> expression . NE expression

    RPAREN          shift and go to state 43
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    GE              shift and go to state 38
    LE              shift and go to state 39
    EQ              shift and go to state 40
    NE              shift and go to state 41


state 26

    (9) statement -> IF LPAREN expression . RPAREN LBRACE statement_list RBRACE
    (10) statement -> IF LPAREN expression . RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . GT expression
    (23) expression -> expression . LT expression
    (24) expression -> expression . GE expression
    (25) expression -> expression . LE expression
    (26) expression -> expression . EQ expression
    (27) expression -> expression . NE expression

    RPAREN          shift and go to state 44
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    GE              shift and go to state 38
    LE              shift and go to state 39
    EQ              shift and go to state 40
    NE              shift and go to state 41


state 27

    (11) statement -> FOR LPAREN for_init . SEMICOLON expression SEMICOLON for_update RPAREN LBRACE statement_list RBRACE

    SEMICOLON       shift and go to state 45


state 28

    (12) for_init -> VAR . ID EQUALS expression

    ID              shift and go to state 46


state 29

    (13) for_init -> ID . EQUALS expression

    EQUALS          shift and go to state 47


state 30

    (14) for_init -> empty .

    SEMICOLON       reduce using rule 14 (for_init -> empty .)


state 31

    (4) statement -> VAR ID EQUALS expression . SEMICOLON
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . GT expression
    (23) expression -> expression . LT expression
    (24) expression -> expression . GE expression
    (25) expression -> expression . LE expression
    (26) expression -> expression . EQ expression
    (27) expression -> expression . NE expression

    SEMICOLON       shift and go to state 48
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    GE              shift and go to state 38
    LE              shift and go to state 39
    EQ              shift and go to state 40
    NE              shift and go to state 41


state 32

    (18) expression -> expression PLUS . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 23
    ID              shift and go to state 21

    expression                     shift and go to state 49

state 33

    (19) expression -> expression MINUS . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 23
    ID              shift and go to state 21

    expression                     shift and go to state 50

state 34

    (20) expression -> expression TIMES . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 23
    ID              shift and go to state 21

    expression                     shift and go to state 51

state 35

    (21) expression -> expression DIVIDE . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 23
    ID              shift and go to state 21

    expression                     shift and go to state 52

state 36

    (22) expression -> expression GT . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 23
    ID              shift and go to state 21

    expression                     shift and go to state 53

state 37

    (23) expression -> expression LT . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 23
    ID              shift and go to state 21

    expression                     shift and go to state 54

state 38

    (24) expression -> expression GE . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 23
    ID              shift and go to state 21

    expression                     shift and go to state 55

state 39

    (25) expression -> expression LE . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 23
    ID              shift and go to state 21

    expression                     shift and go to state 56

state 40

    (26) expression -> expression EQ . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 23
    ID              shift and go to state 21

    expression                     shift and go to state 57

state 41

    (27) expression -> expression NE . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 23
    ID              shift and go to state 21

    expression                     shift and go to state 58

state 42

    (7) statement -> PRINT LPAREN expression RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 59


state 43

    (8) statement -> WHILE LPAREN expression RPAREN . LBRACE statement_list RBRACE

    LBRACE          shift and go to state 60


state 44

    (9) statement -> IF LPAREN expression RPAREN . LBRACE statement_list RBRACE
    (10) statement -> IF LPAREN expression RPAREN . LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    LBRACE          shift and go to state 61


state 45

    (11) statement -> FOR LPAREN for_init SEMICOLON . expression SEMICOLON for_update RPAREN LBRACE statement_list RBRACE
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 23
    ID              shift and go to state 21

    expression                     shift and go to state 62

state 46

    (12) for_init -> VAR ID . EQUALS expression

    EQUALS          shift and go to state 63


state 47

    (13) for_init -> ID EQUALS . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression EQ expression
    (27) expression -> . expression NE expression
    (28) expression -> . NUMBER
    (29) expression -> . ID

    NUMBER          shift and go to state 23
    ID              shift and go to state 21

    expression                     shift and go to state 64

state 48

    (4) statement -> VAR ID EQUALS expression SEMICOLON .

    VAR             reduce using rule 4 (statement -> VAR ID EQUALS expression SEMICOLON .)
    PRINT           reduce using rule 4 (statement -> VAR ID EQUALS expression SEMICOLON .)
    WHILE           reduce using rule 4 (statement -> VAR ID EQUALS expression SEMICOLON .)
    IF              reduce using rule 4 (statement -> VAR ID EQUALS expression SEMICOLON .)
    FOR             reduce using rule 4 (statement -> VAR ID EQUALS expression SEMICOLON .)
    SEMICOLON       reduce using rule 4 (statement -> VAR ID EQUALS expression SEMICOLON .)
    ID              reduce using rule 4 (statement -> VAR ID EQUALS expression SEMICOLON .)
    $end            reduce using rule 4 (statement -> VAR ID EQUALS expression SEMICOLON .)
    RBRACE          reduce using rule 4 (statement -> VAR ID EQUALS expression SEMICOLON .)


state 49

    (18) expression -> expression PLUS expression .
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . GT expression
    (23) expression -> expression . LT expression
    (24) expression -> expression . GE expression
    (25) expression -> expression . LE expression
    (26) expression -> expression . EQ expression
    (27) expression -> expression . NE expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NE resolved as shift
    SEMICOLON       reduce using rule 18 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 18 (expression -> expression PLUS expression .)
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    GE              shift and go to state 38
    LE              shift and go to state 39
    EQ              shift and go to state 40
    NE              shift and go to state 41

  ! PLUS            [ reduce using rule 18 (expression -> expression PLUS expression .) ]
  ! MINUS           [ reduce using rule 18 (expression -> expression PLUS expression .) ]
  ! TIMES           [ reduce using rule 18 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 18 (expression -> expression PLUS expression .) ]
  ! GT              [ reduce using rule 18 (expression -> expression PLUS expression .) ]
  ! LT              [ reduce using rule 18 (expression -> expression PLUS expression .) ]
  ! GE              [ reduce using rule 18 (expression -> expression PLUS expression .) ]
  ! LE              [ reduce using rule 18 (expression -> expression PLUS expression .) ]
  ! EQ              [ reduce using rule 18 (expression -> expression PLUS expression .) ]
  ! NE              [ reduce using rule 18 (expression -> expression PLUS expression .) ]


state 50

    (19) expression -> expression MINUS expression .
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . GT expression
    (23) expression -> expression . LT expression
    (24) expression -> expression . GE expression
    (25) expression -> expression . LE expression
    (26) expression -> expression . EQ expression
    (27) expression -> expression . NE expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NE resolved as shift
    SEMICOLON       reduce using rule 19 (expression -> expression MINUS expression .)
    RPAREN          reduce using rule 19 (expression -> expression MINUS expression .)
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    GE              shift and go to state 38
    LE              shift and go to state 39
    EQ              shift and go to state 40
    NE              shift and go to state 41

  ! PLUS            [ reduce using rule 19 (expression -> expression MINUS expression .) ]
  ! MINUS           [ reduce using rule 19 (expression -> expression MINUS expression .) ]
  ! TIMES           [ reduce using rule 19 (expression -> expression MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 19 (expression -> expression MINUS expression .) ]
  ! GT              [ reduce using rule 19 (expression -> expression MINUS expression .) ]
  ! LT              [ reduce using rule 19 (expression -> expression MINUS expression .) ]
  ! GE              [ reduce using rule 19 (expression -> expression MINUS expression .) ]
  ! LE              [ reduce using rule 19 (expression -> expression MINUS expression .) ]
  ! EQ              [ reduce using rule 19 (expression -> expression MINUS expression .) ]
  ! NE              [ reduce using rule 19 (expression -> expression MINUS expression .) ]


state 51

    (20) expression -> expression TIMES expression .
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . GT expression
    (23) expression -> expression . LT expression
    (24) expression -> expression . GE expression
    (25) expression -> expression . LE expression
    (26) expression -> expression . EQ expression
    (27) expression -> expression . NE expression
